<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_link"
        android:orderInCategory="100"
        android:title="@string/share_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_subscribe"
        android:orderInCategory="100"
        android:title="@string/subscribe"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_simple_mode"
        android:orderInCategory="100"
        android:title="@string/simple_mode"
        app:showAsAction="never" />
</menu>