<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lufficc.ishuhui.activity.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>
