<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="com.lufficc.ishuhui.activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="Version: 1.0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="9sp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="@string/info" />

        <TextView
            android:id="@+id/github"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:background="@drawable/border_rect"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/github"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/lufficc"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:background="@drawable/border_rect"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/lufficc_com"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
